--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
 
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.4.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.4.0-alpha02'
 }
